kubernetes/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: client
  name: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - image: oidc-oauth2-workshop:latest
        name: oidc-oauth2-workshop
        imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: client
  name: client
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: client
