kubernetes/identity-provider.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: idp
  name: idp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: idp
  template:
    metadata:
      labels:
        app: idp
    spec:
      containers:
      - image: ghcr.io/michaelvl/oidc-oauth2-workshop:sha-624d3cf
        name: oidc-oauth2-workshop
        imagePullPolicy: IfNotPresent
        command:
        - "python"
        - "/usr/src/idp-auth-server/app/idp-auth-server.py"
        workingDir: /usr/src/idp-auth-server/app
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: idp
  name: idp
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5001
  selector:
    app: idp
