kubernetes/protected-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: protected-api
  name: protected-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: protected-api
  template:
    metadata:
      labels:
        app: protected-api
    spec:
      containers:
      - image: ghcr.io/michaelvl/oidc-oauth2-workshop:sha-624d3cf
        name: oidc-oauth2-workshop
        imagePullPolicy: IfNotPresent
        command:
        - "python"
        - "/usr/src/protected-api/app/protected-api.py"
        workingDir: /usr/src/protected-api-auth-server/app
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: protected-api
  name: protected-api
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5002
  selector:
    app: protected-api
